--- a/index_what.html
+++ b/index_what.html
@@ -14,7 +14,7 @@
 
     <div class="navigation_bar">
         Navigation bar <br>
-        <div">switch gamemode</div>
+        <div href="../rock_paper_what/index.html">switch gamemode</div>
     </div>
 
     <div class="main">
