--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="header">
-        <h1>Rock, Paper, What?</h1>
+        <h1>🪨Rock, 🧻Paper, 🍌What?</h1>
     </div>
 
     <div class="navigation_bar">
