--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="navigation_bar">
         Navigation bar <br>
-        <div href="../rock_paper_what/index_what.html"> switch gamemode</div>
+        <a href="../rock_paper_what/index_what.html"> switch gamemode</a>
     </div>
 
     <div class="main">
