updated names to style the slot buttons to operate in a global way

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
                 <div id="player_board" class="rps_button_stack">
                     <h3>Player</h3>
-                    <button class="rps_button" id="player_rock_button" onclick="playerPickRock()">rock</button>
-                    <button class="rps_button" id="player_paper_button" onclick="playerPickPaper()">paper</button>
-                    <button class="rps_button" id="player_scissors_button" onclick="playerPickScissors()">scissors</button>
+                    <button class="rps_button" id="player_slot_1" onclick="playerPickSlot1()">slot 1</button>
+                    <button class="rps_button" id="player_slot_2" onclick="playerPickSlot2()">slot 2</button>
+                    <button class="rps_button" id="player_slot_3" onclick="playerPickSlot3()">slot 3</button>
                     <br>
                     <h4>
                         Score:
@@ -50,9 +50,9 @@
     
                 <div id="cpu_board" class="rps_button_stack">
                     <h3>CPU</h3>
-                    <button class="rps_button" id="cpu_rock_button" onclick="cpuPickRock()">rock</button>
-                    <button class="rps_button" id="cpu_paper_button" onclick="cpuPickPaper()">paper</button>
-                    <button class="rps_button" id="cpu_scissors_button" onclick="cpuPickScissors()">scissors</button>
+                    <button class="rps_button" id="cpu_slot_1" onclick="cpuPickSlot1()">slot 1</button>
+                    <button class="rps_button" id="cpu_slot_2" onclick="cpuPickSlot2()">slot 2</button>
+                    <button class="rps_button" id="cpu_slot_3" onclick="cpuPickSlot3()">slot 3</button>
                     <br>
                     <h4>
                         Score:
