game is able to shuffle rock, paper, and scissors with an alias. At least one symbol will be original rock, paper, scissors

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <span id="game_counter_slot">1st</span> of 10th</h3>
             <button onclick="resetGame()">Reset game</button>
         </div>
+        <button onclick="setupGamemode('normal')">test setup</button>
     </div>
     <div class="footer">
         footer
