--- a/index_what.html
+++ b/index_what.html
@@ -56,6 +56,7 @@
     <button onclick="randomizePlayerAlias()">test random player emoji ID</button>
     <button onclick="randomizeCpuAlias()">test random computer emoji ID</button>
     <button onclick="ensureOriginalAlias()">test make game setup fair</button>
+    <button onclick="setupGamemode('what')">test setup emoji</button>
 
     <div class="footer">
         footer
