made an outline for picking what alias emoji is

--- a/index_what.html
+++ b/index_what.html
@@ -50,6 +50,14 @@
                     <br>
                 </div>
             </div>
+            <div id="shuffle_board">
+                <h3><span id="emoji_spotlight"></span>is a...</h3> <br>
+                <button>🪨</button>
+                <button>🧻</button>
+                <button>✂️</button>
+                <br><br>
+                <button>Submit</button>
+            </div>
         </div>
     </div>
 
