spotlight will now show a random enoji. However, it will be either literally rock, paper or scissors

--- a/index_what.html
+++ b/index_what.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div id="shuffle_board">
-                <h3><span id="emoji_spotlight"></span>is a...</h3> <br>
+                <h3><span id="emoji_spotlight">alias</span> is a...</h3> <br>
                 <button>🪨</button>
                 <button>🧻</button>
                 <button>✂️</button>
@@ -65,6 +65,7 @@
     <button onclick="randomizeCpuAlias()">test random computer emoji ID</button>
     <button onclick="ensureOriginalAlias()">test make game setup fair</button>
     <button onclick="switchGamemode('what')">test setup emoji</button>
+    <button onclick="shuffleEmojiSpotlight()">test setup emoji spotlight</button>
 
     <div class="footer">
         footer
