player cannot longer highlight CPU's cards

--- a/index_what.html
+++ b/index_what.html
@@ -44,9 +44,9 @@
     
                 <div id="cpu_board" class="rps_button_stack">
                     <h3>CPU</h3>
-                    <button class="rps_button" id="cpu_slot_1" onclick="cpuPickSlot1()">slot 1</button>
-                    <button class="rps_button" id="cpu_slot_2" onclick="cpuPickSlot2()">slot 2</button>
-                    <button class="rps_button" id="cpu_slot_3" onclick="cpuPickSlot3()">slot 3</button>
+                    <button class="rps_button" id="cpu_slot_1" >slot 1</button>
+                    <button class="rps_button" id="cpu_slot_2" >slot 2</button>
+                    <button class="rps_button" id="cpu_slot_3" >slot 3</button>
                     <br>
                 </div>
             </div>
