the spotlight will show either of the six emojis at random

--- a/index_what.html
+++ b/index_what.html
@@ -52,9 +52,9 @@
             </div>
             <div id="shuffle_board">
                 <h3><span id="emoji_spotlight">alias</span> is a...</h3> <br>
-                <button>🪨</button>
-                <button>🧻</button>
-                <button>✂️</button>
+                <button onclick="guessAliasIs('rock')">🪨</button>
+                <button onclick="guessAliasIs('paper')">🧻</button>
+                <button onclick="guessAliasIs('scissors')">✂️</button>
                 <br><br>
                 <button>Submit</button>
             </div>
