--- a/index_what.html
+++ b/index_what.html
@@ -6,7 +6,7 @@
     <title>🪨Rock, 🧻Paper, 🍌What?</title>
     <link href="../rock_paper_what/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body onload="switchGamemode('what')">
 
     <div class="header">
         <h1>🪨Rock, 🧻Paper, 🍌What?</h1>
@@ -56,7 +56,7 @@
                 <button id="guess_alias_slot_paper" onclick="guessAliasIs('paper')">🧻</button>
                 <button id="guess_alias_slot_scissors" onclick="guessAliasIs('scissors')">✂️</button>
                 <br><br>
-                <button>Submit</button>
+                <button onclick="revealAlias()">Submit</button>
             </div>
         </div>
     </div>
@@ -66,6 +66,7 @@
     <button onclick="ensureOriginalAlias()">test make game setup fair</button>
     <button onclick="switchGamemode('what')">test setup emoji</button>
     <button onclick="shuffleEmojiSpotlight()">test setup emoji spotlight</button>
+    <button onclick="resetGame()"> test reset game</button>
 
     <div class="footer">
         footer
