reveal message will reveal its true id

--- a/index_what.html
+++ b/index_what.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div id="shuffle_board">
-                <h3><span id="emoji_spotlight">alias</span> is a...</h3> <br>
+                <h3><span id="emoji_spotlight">alias</span> is a<span id="emoji_spotlight_reveal">...</span></h3> <br>
                 <button id="guess_alias_slot_rock" onclick="guessAliasIs('rock')">🪨</button>
                 <button id="guess_alias_slot_paper" onclick="guessAliasIs('paper')">🧻</button>
                 <button id="guess_alias_slot_scissors" onclick="guessAliasIs('scissors')">✂️</button>
@@ -60,14 +60,6 @@
             </div>
         </div>
     </div>
-
-    <button onclick="randomizePlayerAlias()">test random player emoji ID</button>
-    <button onclick="randomizeCpuAlias()">test random computer emoji ID</button>
-    <button onclick="ensureOriginalAlias()">test make game setup fair</button>
-    <button onclick="switchGamemode('what')">test setup emoji</button>
-    <button onclick="shuffleEmojiSpotlight()">test setup emoji spotlight</button>
-    <button onclick="resetGame()"> test reset game</button>
-
     <div class="footer">
         footer
     </div>
