upon clicking 'next game' the game fully reset

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <h3>Game match: <br>
                 <span id="game_counter_slot">1st</span> of 10th</h3>
-            <button onclick="resetGame()">Reset game</button>
+            <button onclick="resetGame('normal')">Reset game</button>
         </div>
     </div>
     <div class="footer">
