--- a/index_what.html
+++ b/index_what.html
@@ -56,7 +56,9 @@
                 <button id="guess_alias_slot_paper" onclick="guessAliasIs('paper')">🧻</button>
                 <button id="guess_alias_slot_scissors" onclick="guessAliasIs('scissors')">✂️</button>
                 <br><br>
-                <button onclick="revealAlias()">Submit</button>
+                <div id="alias_submit_button">
+                    <button onclick="revealAlias()">Submit</button>
+                </div>
             </div>
         </div>
     </div>
