created an outline using Fisher-Yates shuffle algoritm to shuffle the location of the cards

--- a/index_what.html
+++ b/index_what.html
@@ -30,6 +30,15 @@
 
                 <div id="player_board" class="rps_button_stack">
                     <h3>Player</h3>
+                    <div id="player_slot_a">
+
+                    </div>
+                    <div id="player_slot_b">
+
+                    </div>
+                    <div id="player_slot_c">
+
+                    </div>
                     <button class="rps_button" id="player_slot_1" onclick="playerPickSlot1()">slot 1</button>
                     <button class="rps_button" id="player_slot_2" onclick="playerPickSlot2()">slot 2</button>
                     <button class="rps_button" id="player_slot_3" onclick="playerPickSlot3()">slot 3</button>
@@ -44,9 +53,15 @@
     
                 <div id="cpu_board" class="rps_button_stack">
                     <h3>CPU</h3>
-                    <button class="rps_button" id="cpu_slot_1" >slot 1</button>
-                    <button class="rps_button" id="cpu_slot_2" >slot 2</button>
-                    <button class="rps_button" id="cpu_slot_3" >slot 3</button>
+                    <div id="cpu_slot_a">
+                        <button class="rps_button" id="cpu_slot_1" >slot 1</button>
+                    </div>
+                    <div id="cpu_slot_b">
+                        <button class="rps_button" id="cpu_slot_2" >slot 2</button>
+                    </div>
+                    <div id="cpu_slot_c">
+                        <button class="rps_button" id="cpu_slot_3" >slot 3</button>
+                    </div>
                     <br>
                 </div>
             </div>
