emoji buttons are of a size appropriate for phones. Updated the font

--- a/index_what.html
+++ b/index_what.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@900&family=Tilt+Neon&display=swap');
+    </style>
     <title>🪨Rock, 🧻Paper, 🍌What?</title>
     <link href="../rock_paper_what/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -13,17 +16,17 @@
     </div>
 
     <div class="navigation_bar">
-        Navigation bar <br>
+        <br>
         <a href="../rock_paper_what/index.html">switch gamemode</a>
     </div>
 
     <div class="main">
-        main
+        <br>
         <div id="game_window">
 
             <!-- Announcement text content will change according to action -->
             <h2 id="announcement_board">
-               announcement board
+                <br>
             </h2>
 
             <div class="universal_board">
