--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     </h4>
                 </div>
             </div>
-
+            <br>
             <h3>Game match: <br>
                 <span id="game_counter_slot">1st</span> of 10th</h3>
-            <button onclick="resetGame('normal')">Reset game</button>
+            <button  id="reset_button" onclick="resetGame('normal')">Reset game</button>
         </div>
     </div>
     <div class="footer">
