--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="../rock_paper_what/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="switchGamemode('normal')">
-
+<div class="wallpaper">
     <div class="header">
         <h1>🪨Rock, 🧻Paper, 🍌What?</h1>
     </div>
@@ -69,8 +69,9 @@
             <button  id="reset_button" onclick="resetGame('normal')">Reset game</button>
         </div>
     </div>
+</div>
     <div class="footer">
-        footer
+        Find the developer
     </div>
     <script src="../rock_paper_what/assets/js/script.js"></script>
 </body>
