--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <!-- Announcement text content will change according to action -->
             <h2 id="announcement_board">
-                <br>
+                Gamemode: Normal
             </h2>
 
             <div class="universal_board">
