--- a/index_what.html
+++ b/index_what.html
@@ -26,7 +26,7 @@
 
             <!-- Announcement text content will change according to action -->
             <h2 id="announcement_board">
-                <br>
+                Gamemode: what?
             </h2>
 
             <div class="universal_board">
