styled the navigation bar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="navigation_bar">
         <br>
         <a href="../rock_paper_what/index_what.html"> switch gamemode</a>
+        |
+        <a>How to play</a>
     </div>
 
     <div class="main">
