--- a/index_what.html
+++ b/index_what.html
@@ -18,6 +18,8 @@
     <div class="navigation_bar">
         <br>
         <a href="../rock_paper_what/index.html">switch gamemode</a>
+        |
+        <a>How to play</a>
     </div>
 
     <div class="main">
