set an outline for the how to play section

--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
             <button  id="reset_button" onclick="resetGame('normal')">Reset game</button>
         </div>
     </div>
+    <div class="game_rules">
+        <h2>How to play: Gamemode "Normal"</h2>
+        <br>
+        <p>some text</p>
+    </div>
 </div>
     <div class="footer">
-        Find the developer
+        
     </div>
     <script src="../rock_paper_what/assets/js/script.js"></script>
 </body>
