wrote and linked a section about how to plat for gamemode normal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <br>
         <a href="../rock_paper_what/index_what.html"> switch gamemode</a>
         |
-        <a>How to play</a>
+        <a href="#game_rules">How to play</a>
     </div>
 
     <div class="main">
@@ -71,10 +71,26 @@
             <button  id="reset_button" onclick="resetGame('normal')">Reset game</button>
         </div>
     </div>
-    <div class="game_rules">
+    <div id="game_rules">
         <h2>How to play: Gamemode "Normal"</h2>
         <br>
-        <p>some text</p>
+        <p>
+            Gamemode “normal” follows the standard rules of Rock, Paper, Scissors. Here’s a brief reminder:
+            <br><br>
+            Rock beats Scissors, Paper beats Rock, and Scissors beat Paper.
+            <br><br>
+            The game is played in a best-of-10 format.
+            <br><br>
+            On the left side of the screen, you will see three cards to choose from. To select a card, click on it to highlight it, then click “Submit”.
+            <br><br>
+            The computer will also select a card, which will be indicated by a highlight on the right side of the screen.
+            <br><br>
+            The pink announcement board at the top will display the winner of each round, and the score will be updated accordingly.
+            <br><br>
+            The next round will begin automatically. Select a new card, or if you don’t, the same card you used in the previous round will be used again.
+            <br><br>
+To reset the game, click “Reset game” at the bottom and confirm by pressing “OK” or hitting enter.
+        </p>
     </div>
 </div>
     <div class="footer">
