write and linked a section about how to play for gamemode what

--- a/index_what.html
+++ b/index_what.html
@@ -19,7 +19,7 @@
         <br>
         <a href="../rock_paper_what/index.html">switch gamemode</a>
         |
-        <a>How to play</a>
+        <a href="#game_rules">How to play</a>
     </div>
 
     <div class="main">
@@ -66,10 +66,36 @@
                 </div>
             </div>
         </div>
+        <div id="game_rules">
+            <h2>How to play: Gamemode "What"</h2>
+            <br>
+            <p>
+            Gamemode “What” assumes you’re already familiar with the rules of regular Rock, Paper, Scissors, as well as how to play it on this website.    <br><br>
+            Five out of six cards have been replaced with a random emoji, your task is to identify whether one of them is a rock, paper, or scissors. The emoji you’ll be identifying is shown in the lower section of the screen.
+            <br><br>
+            The duel is played as usual, but keep an eye on the pink announcement board at the top to see who is winning and which emoji is highlighted.
+            <br><br>
+            To determine the winner;
+            <br>
+            “<“ means the computer wins,
+            <br>
+            “>” means the player wins,
+            <br>
+            “=“ means it’s a draw.
+            <br><br>
+            Play a few rounds until you figure it out.
+            <br><br>
+            You can identify the emoji at the bottom of the screen. To make a guess, select either rock, paper, or scissors and click “Submit” at the lower section of the screen.
+            <br><br>
+            The pink announcement board at the top will tell you how well you did, and the answer will be revealed in the lower section.
+            <br><br>
+            Click "Next Game" to play again.
+        </p>
+        </div>
     </div>
 </div>
     <div class="footer">
-        Find the developer
+
     </div>
     <script src="../rock_paper_what/assets/js/script.js"></script>
 </body>
