--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@900&family=Tilt+Neon&display=swap');
-    </style>      
+    </style>
+    <script src="https://kit.fontawesome.com/4b0d3e328e.js" crossorigin="anonymous"></script>
     <title>🪨Rock, 🧻Paper, 🍌What?</title>
     <link href="../rock_paper_what/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -93,9 +94,35 @@
         </p>
     </div>
 </div>
-    <div class="footer">
-        
+<footer>
+    <div>
+        <h3>
+            - Find the developer -
+        </h3>
+        <ul class="socials_icon_style">
+            <li>
+                <a href="https://www.artstation.com/" target="_blank">
+                    <i class="fa-brands fa-artstation"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.pinterest.com/" target="_blank">
+                    <i class="fa-brands fa-pinterest"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://discord.com/" target="_blank">
+                    <i class="fa-brands fa-discord"></i>
+                </a>
+            </li>
+        </ul>
     </div>
+</footer>
     <script src="../rock_paper_what/assets/js/script.js"></script>
 </body>
 </html>
