validated all code and passed

--- a/index_what.html
+++ b/index_what.html
@@ -1,3 +1,4 @@
+<!-- ver 3 oct 2023 validated -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,7 +79,7 @@
             <br><br>
             To determine the winner;
             <br>
-            “<“ means the computer wins,
+            “&lt;“ means the computer wins,
             <br>
             “>” means the player wins,
             <br>
