user has to confirm their decision to switch gamemode by clicking ok

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="navigation_bar">
         <br>
-        <a href="../rock_paper_what/index_what.html"> switch gamemode</a>
+        <a id='switchGamemodeButton' onclick="switchGamemodeAlert()"> switch gamemode</a>
         |
         <a href="#game_rules">How to play</a>
     </div>
